--- a/Views/index.html.twig
+++ b/Views/index.html.twig
@@ -52,7 +52,7 @@
 			<div class="d-flex align-items-center ms-md-auto">
 				{% if acces == "oui" %}
 					<a class="nav-link" href="?action=logout">Deconnexion</a>
-					<a class="navbar-brand" href="?action=profil"><img class="rounded-circle" id="profil"
+					<a class="navbar-brand" href="?action=infoprofil"><img class="rounded-circle" id="profil"
 																	   alt="avatar1"
 																	   src="https://mdbcdn.b-cdn.net/img/new/avatars/9.webp" /></a>
 				{% else %}
