--- a/Views/projets_liste.html.twig
+++ b/Views/projets_liste.html.twig
@@ -1,7 +1,27 @@
 {% extends "index.html.twig" %}
 
 {% block div %}
-	<div class="container-fluid">
+	<div class="container px-5">
+		<form id="recherche" method="post" action="index.php">
+		<fieldset class="form-group"> <legend>Recherche d'un Projet</legend>
+			<div class="form-group row mb-2">
+				<label for="titre" class="col-sm-2 col-form-label col-form-label-sm">Titre</label>
+				<div class="col-sm-10">
+					<input type="text" id="titre" name="titre" class="form-control form-control-sm" placeholder="Choisir un titre"/>
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="descproj" class="col-sm-2 col-form-label col-form-label-sm">Description d'un projet</label>
+						<div class="col-sm-10">
+					<textarea class="form-control form-control-sm" id="descproj" name="descproj" rows="2" placeholder="Description du projet"></textarea>
+				</div>
+			</div>
+			<button type="submit" name="valider_recher"  class="btn btn-primary w-25 mt-2">Rechercher</button>
+		</fieldset>
+		</form>
+	</div>
+
+	<h1 class="text-center my-4">Projets de tous les Étudiants MMI</h1>
 		<div class="row">
 			{% for proj in projets %}
 				<div class="col col-md-3 mt-3">
@@ -10,20 +30,11 @@
 							<p class="text-center">
 								<strong>{{ proj.titre }}</strong>
 							</p>
-							{# <p>Catégorie :
-																
-																	{{ cates.nomcate }}
-													
-															</p> #}
 							<img src="img/{{proj.image}}" class="img-fluid pb-2" alt="{{proj.titre}}">
-							{# <p>Tags :
-								{{ tags.nomtag }}
-							</p> #}
 							<p>{{proj.descproj}}</p>
 							<p class="text-end">Créé en : {{proj.anneecrea}}</p>
 							<!-- Ajout du bouton "Voir détails projet" en blanc -->
 							<form id="details" method="post" action="index.php?action=details">
-								<input type="hidden" id="idutilisateur" name="idutilisateur" value="1">
 								<input type="hidden" id="idprojet" name="idprojet" value="{{proj.idprojet}}">
 								<button type="submit" name="valid_details" class="btn btn-outline-light btn-sm">Voir détails projet</button>
 							</form>
@@ -32,7 +43,6 @@
 				</div>
 			{% endfor %}
 		</div>
-	</div>
 
 
 {% endblock %}
