--- a/Views/detailproj.html.twig
+++ b/Views/detailproj.html.twig
@@ -43,17 +43,43 @@
 		<h2>Commentaires</h2>
 
 		<!-- Affichage des commentaires -->
-		<div id="comment-list">
-			<?php include 'load_comments.php'; ?>
-		</div>
+
+					<div class="card">
+						{% for comment in comments %}
+						<div class="card-body">
+
+							<div class="d-flex flex-start align-items-center">
+								<img class="rounded-circle shadow-1-strong me-3"
+									 src="photodeprofil/{{comment.utilisateur.photodeprofil}}" alt="photo de profil" width="60"
+									 height="60" />
+								<div>
+									<h6 class="fw-bold text-primary mb-1">{{comment.utilisateur.prenom}} {{comment.utilisateur.nom}}</h6>
+									<p class="text-muted small mb-0">
+										Publié le {{comment.datepublimess}}
+									</p>
+								</div>
+							</div>
+
+							<p class="mt-3 mb-4 pb-2 text-dark">
+								{{comment.messcom}}
+							</p>
+
+						</div>
+						{% endfor %}
+					</div>
+
+
 
 		<!-- Formulaire d'ajout de commentaire -->
 		<form action="index.php" method="post" class="mt-3">
 			<div class="form-group">
-				<label for="commentaire">Ajouter un commentaire :</label>
-				<textarea class="form-control" id="commentaire" name="commentaire" rows="3" required></textarea>
+				<label for="messcom">Ajouter un commentaire :</label>
+				<textarea class="form-control" id="messcom" name="messcom" rows="3" required></textarea>
 			</div>
-			<button type="submit" class="btn btn-primary">Ajouter</button>
+			<input  type="hidden" id="idutilisateur" name="idutilisateur" value="{{idutilisateur}}"/>
+			<input  type="hidden" id="idprojet" name="idprojet" value="{{projs.idprojet}}"/>
+
+			<button type="submit" name="ajouter_comment" class="btn btn-primary mt-2">Ajouter un commentaire</button>
 		</form>
 	</div>
 {% endblock %}
