V1 terminé dans son ensemble + cryptage de mdp

--- a/Views/infoprofil.html.twig
+++ b/Views/infoprofil.html.twig
@@ -3,10 +3,9 @@
 {% block section %}
 
     <div class="container">
-        {% for uti in utis %}
 
         <h1 class="text-center pb-3">
-            {{uti.prenom}} {{uti.nom}}
+            {{utis.prenom}} {{utis.nom}}
         </h1>
         <!-- Info du profil -->
         <div class="row ">
@@ -16,19 +15,22 @@
                     <!-- Div de gauche -->
                     <div class="col-md-6">
                         <p>
-                            <strong>Identifiant IUT :</strong> {{uti.identifiantiut}}
+                            <strong>Identifiant IUT :</strong> {{utis.identifiantiut}}
                         </p>
                         <p>
-                            <strong>Email :</strong> {{uti.email}}
+                            <strong>Email :</strong> {{utis.email}}
                         </p>
+                        <!-- Mot de passe -->
                         <p>
-                            <strong>Mot De Passe :</strong> {{uti.mdp}}
+                            <strong>Mot De Passe :</strong>
+                            <!-- Utilisez un champ de texte masqué par défaut -->
+                            <input type="password" id="maskedPassword" value="{{ utis.mdp }}">
                         </p>
                     </div>
 
                     <!-- Div de droite avec l'image de représentation -->
                     <div class="col-md-6 text-center">
-                        <img src="photodeprofil/{{uti.photodeprofil}}" alt="photo de profil de l'utilisateur " class="img-fluid">
+                        <img src="photodeprofil/{{utis.photodeprofil}}" alt="photo de profil de l'utilisateur " class="img-fluid rounded-circle w-50 ">
                     </div>
                 </div>
 
@@ -38,7 +40,7 @@
                 </div>
             </div>
         </div>
-        {% endfor %}
     </div>
 
+    <script src="profil.js" defer></script>
 {% endblock %}
