--- a/Views/projet_ajout.html.twig
+++ b/Views/projet_ajout.html.twig
@@ -54,7 +54,7 @@
 
                         <div class="form-group mb-3">
                             <label for="url">Sources</label>
-                            <input type="text" class="form-control" id="url" name="url" placeholder="Liens vers les sources">
+                            <input type="text" class="form-control" id="url" name="url" placeholder="Liens vers les sources" value="{{ detailsources.url  }}">
                         </div>
 
                         <div class="form-group mb-3">
