--- a/Views/cateadmin.html.twig
+++ b/Views/cateadmin.html.twig
@@ -4,42 +4,31 @@
 
     <div class="container p-5">
         <form method="post" action="index.php">
-            <fieldset><legend class="pb-3">Choix de la catégorie à modifier</legend>
-                <select name="idprojet" class="form-control form-control-sm mb-3">
-                    {#  {% for proj in projets %}
-<option value="{{cat}}">{{proj.titre}} - {{proj.descriptionproj}} - {{proj.liendemo}} - {{proj.idcontexte}}</option>
-                    {% endfor %}#}
-                </select>
-                <button type="submit" name="cate_modif"  class="btn btn-primary">Valider</button>
-            </fieldset>
-        </form>
-    </div>
-
-    <div class="container p-5">
-        <form method="post" action="index.php">
-            <fieldset><legend class="pb-3">Choix de la catégorie à supprimer</legend>
-                <select name="idprojet" class="form-control form-control-sm mb-3">
-                    {#  {% for proj in projets %}
-<option value="{{cat}}">{{proj.titre}} - {{proj.descriptionproj}} - {{proj.liendemo}} - {{proj.idcontexte}}</option>
-                    {% endfor %}#}
-                </select>
-                <button type="submit" name="cate_supp"  class="btn btn-primary">Supprimer</button>
-            </fieldset>
-        </form>
-    </div>
-
-
-    <div class="container p-5">
-        <form method="post" action="index.php">
             <fieldset><legend class="pb-3">Ajouter une catégorie</legend>
                 <div class="form-group mb-3">
                     <label for="nomcate">Nom de la catégorie</label>
                     <input type="text" class="form-control" id="nomcate" name="nomcate" required placeholder="Entrez le nom d'une catégorie">
                 </div>
-                <button type="submit" name="ajouter-cate"  class="btn btn-primary">Ajouter</button>
+                <button type="submit" name="ajouter_cate"  class="btn btn-primary">Ajouter une catégorie</button>
             </fieldset>
         </form>
     </div>
+
+    <div class="container p-5">
+        <form method="post" action="index.php">
+            <fieldset><legend class="pb-3">Supprimer une catégorie</legend>
+                <select name="idcategorie" class="form-control form-control-sm mb-3">
+                     {% for cate in cates %}
+                        <option value="{{cate.idcategorie}}">{{cate.nomcate}}</option>
+                    {% endfor %}
+                </select>
+                <button type="submit" name="cate_supp"  class="btn btn-primary">Supprimer une catégorie</button>
+            </fieldset>
+        </form>
+    </div>
+
+
+
 
 
 
