--- a/Views/index.html.twig
+++ b/Views/index.html.twig
@@ -45,16 +45,28 @@
 					<li class="nav-item"><a class="nav-link" href="?action=modif">Modifier Projets</a></li>
 					<li class="nav-item"><a class="nav-link" href="?action=suppr">Supprimer Projets</a></li>
 				{% endif %}
-				<li class="nav-item "><a class="nav-link" href="?action=contact">Contact</a>
+
+				{% if admin == "oui" %}
+					<div class="dropdown">
+						<button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown">
+							Espace Admin
+						</button>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="?action=cateadmin">Gestion Catégorie</a></li>
+							<li><a class="dropdown-item" href="?action=contadmin">Gestion Contexte</a></li>
+							<li><a class="dropdown-item" href="?action=utiadmin">Gestion Utilisateur</a></li>
+						</ul>
+					</div>
+				{% endif %}
 			</ul>
 			<!-- right links -->
 
 			<div class="d-flex align-items-center ms-md-auto">
 				{% if acces == "oui" %}
 					<a class="nav-link" href="?action=logout">Deconnexion</a>
-					<a class="navbar-brand" href="?action=infoprofil"><img class="rounded-circle" id="profil"
-																	   alt="avatar1"
-																	   src="https://mdbcdn.b-cdn.net/img/new/avatars/9.webp" /></a>
+					<a class="navbar-brand" href="?action=infoprofil">
+						<img class="rounded-circle" id="profil" alt="photo de profil" src="photodeprofil/{{photodeprofil}}" />
+					</a>
 				{% else %}
 					<a class="nav-link" href="?action=login">Connexion</a>
 					<a class="btn btn-outline-light" href="?action=inscription" role="button">Inscription ➜</a>
@@ -75,6 +87,7 @@
 <!-- Main content -->
 <div class="container">
 	{% block section %}
+		{{message}}
 	{% endblock %}
 </div>
 
@@ -109,7 +122,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
 		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
 		crossorigin="anonymous"></script>
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 
 </html>
