--- a/Views/projet_modification.html.twig
+++ b/Views/projet_modification.html.twig
@@ -6,74 +6,75 @@
         <div class="row justify-content-center">
             <legend class="text-center pb-3">Ajouter un projet </legend>
             <div class="col-lg-5">
-                <form action="ajout_projet.php" method="post">
-                    <div class="form-group mb-3">
+                <form action="index.php" method="post" enctype="multipart/form-data">
+                    <div class="form-group mb-2 pb-1">
                         <label for="titre">Titre</label>
-                        <input type="text" class="form-control" id="titre" name="titre" required placeholder="Entrez le titre du projet" value="{{ proj.titre }}">
+                        <input type="text" class="form-control" id="titre" name="titre" required placeholder="Entrez le titre du projet" value="{{ projs.titre }}">
+                    </div>
+
+                    <div class="form-group d-flex">
+                        <img id="projimage" src="img/{{ projs.image }}" alt="Photo du projet" class="img-thumbnail img-fluid mb-2 h-25 w-25">
+                        <div class="flex-column py-4 ps-2">
+                        <label for="image">Nouvelle image du projet</label>
+                        <input type="file" class="form-control-file" id="image" name="image">
+                        </div>
+                    </div>
+
+                    <div class="form-group pb-1">
+                        <label for="nomtag">Tags</label>
+                        <input type="text" class="form-control" id="nomtag" name="nomtag" placeholder="Tags du projet" value="{{ tags.nomtag }}">
+                    </div>
+
+                    <div class="form-group pb-1">
+                        <label for="nomcate">Catégorie</label>
+                        <select class="form-select" name="idcategorie" id="idcategorie">
+                            {% for cate in cates %}
+                                <option value="{{cate.idcategorie}}">{{cate.nomcate}}</option>
+                            {% endfor %}
+                        </select>
                     </div>
 
                     <div class="form-group mb-3">
-                        <label for="image">Image du projet</label>
-                        <input type="file" class="form-control-file" id="image" name="image" value="{{ proj.image}}">
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label for="nom">Nom</label>
-                        <input type="text" class="form-control" id="nom" name="nom" placeholder="Nom du créateur du projet">
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label for="tags">Tags</label>
-                        <input type="text" class="form-control" id="tags" name="tags" placeholder="Tags du projet">
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label for="contexte">Contexte</label>
-                        <input type="text" class="form-control" id="contexte" name="contexte" placeholder="Contexte du projet">
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label for="semestre">Semestre</label>
-                        <input type="text" class="form-control" id="semestre" name="semestre" placeholder="Semestre du projet">
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label for="intitule">Intitulé</label>
-                        <input type="text" class="form-control" id="intitule" name="intitule" placeholder="Intitulé du projet">
+                        <label for="idcontexte">Contexte</label>
+                        <select class="form-select" name="idcontexte" id="idcontexte">
+                            {% for contexte in cont %}
+                                <option value="{{contexte.idcontexte}}">{{contexte.identifiant}} - {{contexte.semestre}}  - {{contexte.intitule}} </option>
+                            {% endfor %}
+                        </select>
                     </div>
             </div>
 
             <div class="col-lg-5">
-                <div class="form-group mb-3">
-                    <label for="description">Description</label>
-                    <textarea class="form-control" id="description" name="description" rows="6" placeholder="Description du projet" >{{ proj.descriptionproj }}</textarea>
+                <div class="form-group mb-1">
+                    <label for="descproj">Description</label>
+                    <textarea class="form-control" id="descproj" name="descproj" rows="5" placeholder="Description du projet">{{ projs.descproj }}</textarea>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="lien_demo">Lien démo</label>
-                    <input type="text" class="form-control" id="lien_demo" name="lien_demo" placeholder="Lien vers la démo" value="{{ proj.liendemo }}">
+                    <label for="liendemo">Lien démo</label>
+                    <input type="text" class="form-control" id="liendemo" name="liendemo" placeholder="Lien vers la démo" value="{{ projs.liendemo }}">
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="sources">Sources</label>
-                    <input type="text" class="form-control" id="sources" name="sources" placeholder="Liens vers les sources">
+                    <label for="url">Sources</label>
+                    <input type="text" class="form-control" id="url" name="url" placeholder="Liens vers les sources" value="{{ sources.url }}">
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="identifiant">Identifiant</label>
-                    <input type="text" class="form-control" id="identifiant" name="identifiant" placeholder="Identifiant du projet">
+                    <label for="anneecrea">Année de création</label>
+                    <input type="text" class="form-control" id="anneecrea" name="anneecrea" placeholder="Année de création du projet" value="{{ projs.anneecrea }}">
                 </div>
 
-                <div class="form-group mb-3">
-                    <label for="annee_creation">Année de création</label>
-                    <input type="text" class="form-control" id="annee_creation" name="annee_creation" placeholder="Année de création du projet">
-                </div>
             </div>
+
+            <input  type="hidden" id="idtags" name="idtags" value="{{ projs.idprojet }}"/>
+            <input  type="hidden" id="idprojet" name="idprojet" value="{{ tags.idtags }}"/>
 
             <!-- Bouton en dehors des colonnes, centré et plus large -->
             <div class="col-lg-12 text-center mt-4">
-                <button type="submit" class="btn btn-primary btn-lg px-5 py-2">Ajouter</button>
+                <button type="submit" name="valider_modif" value="valider_modif" class="btn btn-primary btn-lg px-5 py-2">Modifier le proj</button>
             </div>
+
             </form>
         </div>
     </div>
