--- a/design.css
+++ b/design.css
@@ -84,6 +84,42 @@ p{
 	color: rgba(255,255,255,.55) !important;
 	border-color: rgba(255,255,255,.1) !important;
 }
+
+.rating {
+	unicode-bidi: bidi-override;
+	direction: rtl;
+	text-align: end;
+}
+
+.rating input {
+	display: none;
+}
+
+.rating label {
+	display: inline-block;
+	padding: 5px;
+	font-size: 24px;
+	color: #777777;
+	cursor: pointer;
+}
+
+.rating label:hover,
+.rating label:hover ~ label,
+.rating input:checked ~ label {
+	color: #ffcc00;
+}
+
+#btnSubmit {
+	margin-top: 10px;
+}
+
+#maskedPassword {
+	font-family: monospace;
+	letter-spacing: 2px;
+	color: white; /* Couleur du texte en blanc */
+	background-color: #160D27;
+	border: none;
+}
 @media screen and (max-width: 770px) {
 	#menu{
 		padding-left: 0px;
@@ -118,4 +154,6 @@ p{
 		max-width: 100%;
 		height: 100px !important;
 	}
+
+
 }
